--- a/index.html
+++ b/index.html
@@ -71,7 +71,70 @@
 
     <section id="experiencia">
      <h2>Mi experiencia</h2>
-<p>bla bla bla bla bla c: </p>
+     <div class="container">
+       <div class="row">
+         <div class="col-12 col-md-6">
+        <i class="fas fa-chart-line"></i>
+
+         </div>
+         <div class="col-12 col-md-6">
+<i class="fas fa-brain"></i>
+
+         </div>
+       </div>
+
+     </div>
+
+<h2>Mis Skills</h2>
+     <div class="container">
+
+       <div id="carouselExampleIndicators" class="carousel slide py-5" data-ride="carousel">
+      <ol class="carousel-indicators">
+        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+      </ol>
+
+      <div class="carousel-inner py-3">
+        <div class="carousel-item active">
+          <div class="row">
+            <div class="col-3">
+              <p>java</p>
+            </div>
+            <div class="col-3">
+              <p>python</p>
+            </div>
+            <div class="col-3">
+              <p>Sql</p>
+            </div>
+            <div class="col-3">
+              <p>Knime</p>
+            </div>
+          </div>
+        </div>
+
+          <div class="carousel-item">
+            <div class="row">
+              <div class="col-3">
+                <p>IA</p>
+              </div>
+              <div class="col-3">
+                <p>html</p>
+              </div>
+              <div class="col-3">
+                <p>css</p>
+              </div>
+              <div class="col-3">
+                <p>Javascript</p>
+              </div>
+
+            </div>
+          </div>
+
+        </div>
+
+      </div>
+
+     </div>
     </section>
 
 
