--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
 
   <!--Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Cabin|Lobster&display=swap" rel="stylesheet">
-
+<link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah|Raleway&display=swap" rel="stylesheet">
 
   <!-- <script src="https://kit.fontawesome.com/a61a43df6b.js"></script> -->
 
@@ -25,7 +24,7 @@
   <body>
 
     <nav class="navbar navbar-expand-lg  navbar-dark  color-celeste  ">
-    <a class="navbar-brand logo " href="#">Eli Carreño </a>
+    <a class="navbar-brand f-logo pl-3 " href="#"><i class="fas fa-snowflake"></i> Eli Carreño </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
     </button>
@@ -50,11 +49,11 @@
 
     <header class="bg-hero text-center vh-100 text-white">
         <h2>Yo soy</h2>
-        <span class="border-top h1">Eli Carreño</span>
+        <span class="border-top  logo h1">Eli Carreño</span>
     </header>
 
     <section id="sobre-mi" class=" mt-5 mx-5 px-5 d-none d-md-block">
-      <h3 class="text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit, </h3 >
+      <h3 class="f-logo text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit, </h3 >
 
       <div class="row my-4">
         <div class="col-6">
@@ -70,7 +69,7 @@
     </section>
 
     <section id="experiencia">
-     <h2>Mi experiencia</h2>
+     <h2 class="f-logo text-center">Mi experiencia</h2>
      <div class="container">
        <div class="row">
          <div class="col-12 col-md-6">
@@ -85,7 +84,7 @@
 
      </div>
 
-<h2>Mis Skills</h2>
+<h2 class="f-logo text-center text-seconday">Mis Skills</h2>
      <div class="container">
 
        <div id="carouselExampleIndicators" class="carousel slide py-5" data-ride="carousel">
@@ -98,16 +97,16 @@
         <div class="carousel-item active">
           <div class="row">
             <div class="col-3">
-              <p>java</p>
+              <i class="fab fa-java"></i>
             </div>
             <div class="col-3">
-              <p>python</p>
+        <i class="fab fa-python"></i>
             </div>
             <div class="col-3">
-              <p>Sql</p>
+            <i class="fas fa-database"></i>
             </div>
             <div class="col-3">
-              <p>Knime</p>
+        <i class="fas fa-calculator"></i>
             </div>
           </div>
         </div>
@@ -115,16 +114,16 @@
           <div class="carousel-item">
             <div class="row">
               <div class="col-3">
-                <p>IA</p>
+                <i class="fas fa-robot"></i>
               </div>
               <div class="col-3">
-                <p>html</p>
+              <i class="fas fa-code"></i>
               </div>
               <div class="col-3">
-                <p>css</p>
+                <i class="fab fa-css3-alt"></i>
               </div>
               <div class="col-3">
-                <p>Javascript</p>
+              <i class="fab fa-js-square"></i>
               </div>
 
             </div>
@@ -138,16 +137,16 @@
     </section>
 
 
-    <section id="trabajos" class="color-celeste py-5">
-      <h2 class="text-center">Mis ultimos trabajos</h2>
+    <section id="trabajos" class="color-celeste py-5 ">
+      <h2 class="f-logo text-center text-white">Mis ultimos trabajos</h2>
       <div class="container">
         <div class="row">
           <div class="col-12 col-md-4">
             <div class="card my-3" style="width: 18rem;">
               <img src="assets/img/meet_coffee.png" class="card-img-top" alt="...">
               <div class="card-body">
-                <h5 class="card-title">Meet & Coffee</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <h5 class="card-title text-celeste">Meet & Coffee</h5>
+                <p class="card-text text-secondary">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
               </div>
             </div>
           </div>
@@ -156,8 +155,8 @@
             <div class="card my-3" style="width: 18rem;">
               <img src="assets/img/iguana_page.png" class="card-img-top" alt="...">
               <div class="card-body">
-                <h5 class="card-title">Iguana Page</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <h5 class="card-title text-celeste">Iguana Page</h5>
+                <p class="card-text text-secondary">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
               </div>
             </div>
           </div>
@@ -167,8 +166,8 @@
             <div class="card my-3" style="width: 18rem;">
               <img src="assets/img/suricata.png" class="card-img-top" alt="...">
               <div class="card-body">
-                <h5 class="card-title">Suricata</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <h5 class="card-title text-celeste">Suricata</h5>
+                <p class="card-text text-secondary">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
               </div>
             </div>
           </div>
@@ -181,8 +180,8 @@
             <div class="card my-3" style="width: 18rem;">
               <img src="assets/img/cuppon.png" class="card-img-top" alt="...">
               <div class="card-body">
-                <h5 class="card-title">Cuppon</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <h5 class="card-title text-celeste">Cuppon</h5>
+                <p class="card-text text-secondary">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
               </div>
             </div>
           </div>
@@ -191,8 +190,8 @@
             <div class="card my-3" style="width: 18rem;">
               <img src="assets/img/ricomida.png" class="card-img-top" alt="...">
               <div class="card-body">
-                <h5 class="card-title">Ricomida</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <h5 class="card-title text-celeste">Ricomida</h5>
+                <p class="card-text text-secondary">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
               </div>
             </div>
           </div>
@@ -201,8 +200,8 @@
             <div class="card my-3" style="width: 18rem;">
               <img src="assets/img/dmark.png" class="card-img-top" alt="...">
               <div class="card-body">
-                <h5 class="card-title">Dmark</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <h5 class="card-title text-celeste">Dmark</h5>
+                <p class="card-text text-secondary">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
               </div>
             </div>
           </div>
@@ -215,7 +214,7 @@
     </section>
 
   <section id="contacto">
-    <p>contacto</p>
+    <h2 class="f-logo text-center">contacto</h2>
 
   <div class="typeform-widget" data-url="https://elicarreno.typeform.com/to/nbNBRz" style="width: 100%; height: 100%;"></div> <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm", b="https://embed.typeform.com/"; if(!gi.call(d,id)) { js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script> <div style="font-family: Sans-Serif;font-size: 12px;color: #999;opacity: 0.5; padding-top: 5px;"> powered by <a href="https://admin.typeform.com/signup?utm_campaign=nbNBRz&utm_source=typeform.com-14504452-Basic&utm_medium=typeform&utm_content=typeform-embedded-poweredbytypeform&utm_term=ES" style="color: #999" target="_blank">Typeform</a> </div>
 
@@ -228,7 +227,7 @@
 
         <div class="row py-3">
           <div class="col-12 col-md-6">
-            <p class="m-0">Eli</p>
+            <p class="m-0 f-logo text-center h2"> <i class="fas fa-snowflake"></i> Eli</p>
           </div>
 
           <div class="col-12 col-md-6">
