--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@ organizar código-->
     </nav>
 
 
-    <header class="bg-hero text-center  vh-100 text-white ">
-
-
-        <h2 class="yo-soy">Yo soy</h2>
-        <span class="border-top align-text-bottom logo h1">Eli Carreño</span>
+    <header class="text-center vh-100 text-white pt-5 mt-5 d-flex ">
+      <div class="container align-self-end mb-4">
+        <h2>Yo soy</h2>
+        <h1 class="border-top d-inline logo">Eli Carreño</h1>
+      </div>
 
     </header>
 
@@ -77,29 +77,36 @@ organizar código-->
         </div>
     </section>
 
-    <section id="experiencia" class="text-center">
+    <section id="experiencia" class="text-center mt-4">
      <h2 class="f-logo">Mi experiencia</h2>
      <div class="container">
        <div class="row">
-         <div class="col-12 col-md-6"><i class="fas fa-chart-line fa-2x"></i></div>
-         <div class="col-12 col-md-6"><i class="fas fa-brain fa-2x"></i></div>
+         <div class="col-12 col-md-6 my-4"><i class="mb-2 fas fa-chart-line fa-6x text-celeste"></i>
+            <p class="f-logo h4 my-1">Analista de Negocios</p>
+            <p class= "h5 font-weight-light my-0">2016 -2018</p>
+           </div>
+         <div class="col-12 col-md-6 my-4"><i class="mb-2 fas fa-brain fa-6x text-celeste"></i>
+           <p class="f-logo h4 my-1 ">Lead Data Science</p>
+           <p class= "h5 font-weight-light my-0">2018 -2019</p>
+          </div>
+
        </div>
      </div>
 
 
 
 
-<h2 class="f-logo text-center text-seconday">Mis Skills</h2>
+<h2 class="f-logo text-center text-seconday mt-3 pt-1">Mis Skills</h2>
 
      <div class="container text-center">
 
-       <div id="carouselExampleIndicators" class="carousel slide py-5" data-ride="carousel">
+       <div id="carouselExampleIndicators" class="carousel slide pt-3 pb-5" data-ride="carousel">
       <ol class="carousel-indicators">
         <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
         <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
       </ol>
 
-      <div class="carousel-inner py-3">
+      <div class="carousel-inner ">
         <div class="carousel-item active">
           <div class="row">
             <div class="col-3">
@@ -143,8 +150,8 @@ organizar código-->
       <h2 class="f-logo text-center text-white">Mis ultimos trabajos</h2>
       <div class="container">
         <div class="row">
-          <div class="col-12 col-md-4">
-            <div class="card my-3" style="width: 18rem;">
+          <div class="col-12 col-md-4 ">
+            <div class="card my-3 mx-auto" >
               <img src="assets/img/meet_coffee.png" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title text-celeste">Meet & Coffee</h5>
@@ -154,7 +161,7 @@ organizar código-->
           </div>
 
           <div class="col-12 col-md-4">
-            <div class="card my-3" style="width: 18rem;">
+            <div class="card my-3 mx-auto">
               <img src="assets/img/iguana_page.png" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title text-celeste">Iguana Page</h5>
@@ -165,7 +172,7 @@ organizar código-->
 
 
           <div class="col-12 col-md-4">
-            <div class="card my-3" style="width: 18rem;">
+            <div class="card my-3 mx-auto">
               <img src="assets/img/suricata.png" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title text-celeste">Suricata</h5>
@@ -179,7 +186,7 @@ organizar código-->
         <div class="row">
 
           <div class="col-12 col-md-4">
-            <div class="card my-3" style="width: 18rem;">
+            <div class="card my-3 mx-auto">
               <img src="assets/img/cuppon.png" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title text-celeste">Cuppon</h5>
@@ -189,7 +196,7 @@ organizar código-->
           </div>
 
           <div class="col-12 col-md-4">
-            <div class="card my-3" style="width: 18rem;">
+            <div class="card my-3 mx-auto">
               <img src="assets/img/ricomida.png" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title text-celeste">Ricomida</h5>
@@ -199,7 +206,7 @@ organizar código-->
           </div>
 
           <div class="col-12 col-md-4">
-            <div class="card my-3" style="width: 18rem;">
+            <div class="card my-3 mx-auto">
               <img src="assets/img/dmark.png" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title text-celeste">Dmark</h5>
@@ -218,34 +225,28 @@ organizar código-->
   <section id="contacto">
     <h2 class="f-logo text-center">contacto</h2>
 
-  <div class="typeform-widget" data-url="https://elicarreno.typeform.com/to/nbNBRz" style="width: 100%; height: 100%;"></div> <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm", b="https://embed.typeform.com/"; if(!gi.call(d,id)) { js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script> <div style="font-family: Sans-Serif;font-size: 12px;color: #999;opacity: 0.5; padding-top: 5px;"> powered by <a href="https://admin.typeform.com/signup?utm_campaign=nbNBRz&utm_source=typeform.com-14504452-Basic&utm_medium=typeform&utm_content=typeform-embedded-poweredbytypeform&utm_term=ES" style="color: #999" target="_blank">Typeform</a> </div>
-
+  <div class="typeform-widget" data-url="https://elicarreno.typeform.com/to/nbNBRz" style="width: 100%; height: 100%;"></div> <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm", b="https://embed.typeform.com/"; if(!gi.call(d,id)) { js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script> <div style="font-family: Sans-Serif;font-size: 12px;color: #999;opacity: 0.5; padding-top: 3px;"> powered by <a href="https://admin.typeform.com/signup?utm_campaign=nbNBRz&utm_source=typeform.com-14504452-Basic&utm_medium=typeform&utm_content=typeform-embedded-poweredbytypeform&utm_term=ES" style="color: #999" target="_blank">Typeform</a> </div>
   </section>
 
 
 
-    <footer class="color-celeste text-white text-center">
+<footer class="color-celeste text-white text-center">
       <div class="container">
 
-        <div class="row py-3">
-          <div class="col-12 col-md-6">
+        <div class="row py-2 ">
+          <div class="col-12 col-md-6 my-3">
             <p class="m-0 f-logo text-center h2"> <i class="fas fa-snowflake"></i> Eli</p>
           </div>
 
-          <div class="col-12 col-md-6">
+          <div class="col-12 col-md-6 my-3">
             <a href="https://github.com/aoiymk" class="px-1"><i class="fab fa-github-square fa-3x"></i></a>
             <a href="https://twitter.com/soy_la_eli" class="px-1"><i class="fab fa-twitter-square fa-3x"></i></a>
             <a href="#" class="px-1"><i class="fab fa-facebook-square fa-3x"></i></a>
             <a href="https://www.linkedin.com/in/elicarreno/" class="px-1"><i class="fab fa-linkedin fa-3x"></i></a>
           </div>
 
-
-
-
         </div>
-
       </div>
-
 
     </footer>
 
