--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
   </section>
 
   <section id="contacto">
-    <h2 class="f-logo text-center">contacto</h2>
+    <h2 class="f-logo text-center mt-5">Contacto</h2>
 
     <div class="typeform-widget" data-url="https://elicarreno.typeform.com/to/nbNBRz" style="width: 100%; height: 100%;"></div>
     <script>
